--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/_SiteLoginPartial.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/_SiteLoginPartial.cshtml
@@ -1,6 +1,5 @@
 ﻿@{
-    string currentLanguage = LanguageDetector.GetCurrentLanguage();
-    NccTranslator<ThemeTranslation> _TT = new NccTranslator<ThemeTranslation>(currentLanguage);
+    NccTranslator<ThemeResources> _TT = new NccTranslator<ThemeResources>(CurrentLanguage);
 }
 
 @if (SignInManager.IsSignedIn(User))
