--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Manage.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Manage.cshtml
@@ -148,12 +148,14 @@
                                     {
                                         for (var i = 0; i < item.PageDetails.Count; i++)
                                         {
-                                            <a asp-controller="@controllerName" asp-action="Index" asp-route-slug="@item.PageDetails[i].Slug" target="_blank" class="btn btn-outline btn-info btn-xs"><i class="fa fa-eye"></i> @item.PageDetails[i].Language</a>
+                                            @*<a asp-controller="@controllerName" asp-action="Index" asp-route-slug="@item.PageDetails[i].Slug" target="_blank" class="btn btn-outline btn-info btn-xs"><i class="fa fa-eye"></i> @item.PageDetails[i].Language</a>*@
+                                            <a href="/@item.PageDetails[i].Language/@item.PageDetails[i].Slug" target="_blank" class="btn btn-outline btn-info btn-xs"><i class="fa fa-eye"></i> @item.PageDetails[i].Language</a>
                                         }
                                     }
                                     else
                                     {
-                                        <a asp-controller="@controllerName" asp-action="Index" asp-route-slug="@item.PageDetails.Where(x => x.Language == GlobalConfig.WebSite.Language).FirstOrDefault().Slug" target="_blank" class="btn btn-outline btn-info btn-xs"><i class="fa fa-eye"></i> @item.PageDetails.Where(x => x.Language == GlobalConfig.WebSite.Language).FirstOrDefault().Language</a>
+                                        @*<a asp-controller="@controllerName" asp-action="Index" asp-route-slug="@item.PageDetails.Where(x => x.Language == GlobalConfig.WebSite.Language).FirstOrDefault().Slug" target="_blank" class="btn btn-outline btn-info btn-xs"><i class="fa fa-eye"></i> @item.PageDetails.Where(x => x.Language == GlobalConfig.WebSite.Language).FirstOrDefault().Language</a>*@
+                                        <a href="/@item.PageDetails.Where(x => x.Language == GlobalConfig.WebSite.Language).FirstOrDefault().Slug"  target="_blank" class="btn btn-outline btn-info btn-xs"><i class="fa fa-eye"></i> @item.PageDetails.Where(x => x.Language == GlobalConfig.WebSite.Language).FirstOrDefault().Language</a>
                                     }
                                 </td>
                             </tr>
