--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/_HomeLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/_HomeLayout.cshtml
@@ -1,70 +1,59 @@
 ﻿@{
-    ViewBag.CurrentLayout = "HomeLayout";
+    CurrentLayout = "HomeLayout";
+    CurrentLanguage = ThemeHelper.GetCurrentLanguage();
+    NccTranslator<ThemeResources> _TT = new NccTranslator<ThemeResources>(CurrentLanguage);
 }
 
 <!DOCTYPE html>
 <html>
-    <head>
-        @Html.Partial("Parts/_Head")
-        @Html.Raw(JavaScriptSnippet.FullScript)
-        @RenderSection("Styles", required: false)
-    </head>
-    <body id="body">
-        <!-- Zone TOP Start-->
-        <!-- Header -->
-        @Html.Partial("Parts/_Header")    
+<head>
+    @NccRenderHead()
+    @Html.Raw(JavaScriptSnippet.FullScript)
+    @NccRenderHeaderCss()
+    @NccRenderHeaderScripts()
 
-        <!-- Navbar -->
-        <nav id="mainNavbar" class="navbar navbar-default">
-            <div class="container">
-                <div class="navbar-header">
-                    @Html.Partial("Parts/_NavbarPart")
-                </div>
-                <div class="navbar-collapse collapse">
-                    @Html.Raw(MenuHelper.PrepareMenuHtml("Navigation", LanguageDetector.GetCurrentLanguage()))
-                    <div class="userMenu">
-                        @await Html.PartialAsync("_SiteLoginPartial")
-                    </div>
-                </div>
+    @RenderSection(ThemeHelper.Sections.StyleHeader, required: false)
+    @RenderSection(ThemeHelper.Sections.ScriptHeader, required: false)
+    @RenderSection("Styles", required: false)
+</head>
+<body id="body">
+    <!-- Loading -->
+    @NccRenderLoadingMaskContainer()
+    <!-- Header -->
+    @NccRenderHeader()
+    <!-- Navbar -->
+    @NccRenderNavigation()
+    <!-- Featured -->
+    @NccRenderFeaturedSection("Parts/_FullWidthSlider")
+
+    <!--  Main Body -->
+    <div class="container mainBody">
+        <!-- Left Column -->
+        @NccRenderLeftColumn()
+
+        <!-- Right Column -->
+        @NccRenderRightColumn()
+
+        <!-- Main content -->
+        <div class="col-md-@BodyWidth">
+            <!-- Featured -->
+            @NccRenderFeaturedSection()
+
+            <!-- Container for showing global messages. -->
+            <div class="row">
+                @NccRenderGlobalMessageContainer()
             </div>
-        </nav>        
-        <!-- Zone TOP End-->
-        
-        <!-- Full Width Slider Start -->
-        @Html.Partial("Parts/_FullWidthSlider")
-        <!-- Full Width Slider End -->
-
-        <!--  Main Body Start -->
-        <div class="container mainBody">   
-            <!-- Left Column start -->
-            @if ((bool)this.ViewContext.HttpContext.Items["hasLeftColumn"])
-            {
-                @Html.Partial("Parts/_LeftColumn");
-            }
-            <!-- Left Column end -->
-
-            <!-- Right Column start -->
-            @if ((bool)this.ViewContext.HttpContext.Items["hasRightColumn"])
-            {
-                @Html.Partial("Parts/_RightColumn");
-            }
-            <!-- Right Column end -->
-
-            <!-- Main content Start -->
-            <div class="col-md-@this.ViewContext.HttpContext.Items["bodyClassWidth"]">
-                <!-- Featured Start -->
-                @Html.Partial("Parts/_Featured")
-                <!-- Featured End -->
-
-                @RenderBody()
-            </div>
-            <!-- Main content End -->
-
+            @NccRenderBody()
         </div>
-        <!--  Main Body End -->
+    </div>
 
-        @Html.Partial("Parts/_Footer")
-        @RenderSection("Scripts", required: false)
-    </body>
+    <!--  Footer -->
+    @NccRenderFooter()
+    @NccRenderFooterCss()
+    @NccRenderFooterScripts()
+    @RenderSection(ThemeHelper.Sections.StyleFooter, required: false)
+    @RenderSection(ThemeHelper.Sections.ScriptFooter, required: false)
+    @RenderSection("Scripts", required: false)
+</body>
 </html>
 
