--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/_ViewImports.cshtml
@@ -1,22 +1,24 @@
-﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
+﻿@inherits NccRazorPage<TModel>
 
 @using NetCoreCMS.Framework.Core
-@using Microsoft.AspNetCore.Identity
-
+@using NetCoreCMS.Framework.Core.Models
+@using NetCoreCMS.Framework.Core.Mvc.Views
+@using NetCoreCMS.Framework.Core.Mvc.Views.Extensions
 @using NetCoreCMS.Framework.Utility
 @using NetCoreCMS.Framework.Modules
 @using NetCoreCMS.Framework.Modules.Widgets
-@using NetCoreCMS.Framework.Core.Models
 @using NetCoreCMS.Framework.Themes
-@using NetCoreCMS.Framework.Core.Mvc.Views
-@using NetCoreCMS.Framework.Core.Mvc.Views.Extensions
-@using Microsoft.Extensions.Localization
-@using NetCoreCMS.Framework.i18n
 @using NetCoreCMS.Themes.NccSeventeen.Lib
+@using NetCoreCMS.Framework.i18n
+
+@using Microsoft.AspNetCore.Identity
+@using Microsoft.Extensions.Localization
 
 @addTagHelper *, NetCoreCMS.Framework
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 @inject SignInManager<NccUser> SignInManager
 @inject UserManager<NccUser> UserManager
 @inject NccLanguageDetector LanguageDetector
+@inject IStringLocalizer _T
